# FEUP-Projects

./: README.md
aed-c++/SheduleManagement/: CMakeLists.txt  README.md  main.cpp
aed-c++/SheduleManagement/docs/: Doxyfile
aed-c++/SheduleManagement/docs/input/: students_classes.csv
aed-c++/SheduleManagement/docs/output/html/: MainPage.md  _app_8cpp.html  _app_8h.html  _app_8h_source.html  _parse_8cpp.html  _parse_8h.html  _parse_8h_source.html  _request_8cpp.html  _request_8h.html  _request_8h_source.html  _student_classes_8cpp.html  _student_classes_8h.html  _student_classes_8h_source.html  _time_slot_8cpp.html  _time_slot_8h.html  _time_slot_8h_source.html  _turma_8cpp.html  _turma_8h.html  _turma_8h_source.html  _turma_schedule_8cpp.html  _turma_schedule_8h.html  _turma_schedule_8h_source.html  _u_c_8cpp.html  _u_c_8h.html  _u_c_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_parse-members.html  class_parse.html  class_request-members.html  class_request.html  class_student_classes-members.html  class_student_classes.html  class_time_slot-members.html  class_time_slot.html  class_turma-members.html  class_turma.html  class_turma_schedule-members.html  class_turma_schedule.html  (+26 more)
aed-c++/SheduleManagement/docs/requests/: rejected_requests.csv
aed-c++/SheduleManagement/include/: App.h  Parse.h  Request.h  StudentClasses.h  TimeSlot.h  Turma.h  TurmaSchedule.h  UC.h
aed-c++/SheduleManagement/src/: App.cpp  Parse.cpp  Request.cpp  StudentClasses.cpp  TimeSlot.cpp  Turma.cpp  TurmaSchedule.cpp  UC.cpp
fsi-python-docker/: LOGBOOK10.md  (+9 more)
(+72 files in other folders)
