cmake_minimum_required(VERSION 3.26)
project(AED2324_PRJ1_G15)

set(CMAKE_CXX_STANDARD 17)

add_executable(AED2324_PRJ1_G15 main.cpp
        include/Turma.h
        src/Turma.cpp
        src/StudentClasses.cpp
        include/StudentClasses.h
        src/TimeSlot.cpp
        include/TimeSlot.h
        src/TurmaSchedule.cpp
        include/TurmaSchedule.h
        src/Parse.cpp
        include/Parse.h
        src/App.cpp
        include/App.h
        include/Request.h
        src/Request.cpp
        src/UC.cpp
        include/UC.h)

# Doxygen Build
find_package(Doxygen)
if(DOXYGEN_FOUND)
    set(BUILD_DOC_DIR "${CMAKE_SOURCE_DIR}/docs/output")
    if(NOT EXISTS "${BUILD_DOC_DIR}")
        file(MAKE_DIRECTORY "${BUILD_DOC_DIR}")
    endif()
    set(DOXYGEN_IN "${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile")
    set(DOXYGEN_OUT "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
    configure_file("${DOXYGEN_IN}" "${DOXYGEN_OUT}" @ONLY)
    message("Doxygen build started")
    add_custom_target(Doxygen ALL
            COMMAND "${DOXYGEN_EXECUTABLE}" "${DOXYGEN_OUT}"
            WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
            COMMENT "Generating API documentation with Doxygen"
            VERBATIM)
else(DOXYGEN_FOUND)
    message("Doxygen needs to be installed to generate the documentation.")
endif(DOXYGEN_FOUND)